# gitbugactions-poetry-test-repo

./: README.md  pyproject.toml
simple_project/: calculator.py
tests/: test_calculator.py
