[project]
name = "simple-project"
version = "0.1.0"
description = "A simple project using Poetry and pytest"
authors = [
    {name = "Developer"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
